Adding connection to database

--- a/rainfall_and_coverage.ipynb
+++ b/rainfall_and_coverage.ipynb
@@ -3,20 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55ad7855",
+   "id": "2fc07240",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Import dependencies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "from getpass import getpass\n",
+    "from sqlalchemy import create_engine "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8408a8f",
+   "id": "d59fea31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd74a68a",
+   "id": "664dd449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Isolate relevent columns\n",
+    "columns=[\"\"]\n",
+    "df = df.loc[:, columns].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9755eb74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "800a963a",
+   "id": "abb683a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73d2664d",
+   "id": "a309df55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49688189",
+   "id": "c1632c02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +89,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf21de6",
+   "id": "edb64b86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change datatypes\n",
+    "df[] = df[].astype('float')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80727038",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -83,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff160feb",
+   "id": "d6900b8e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "517e9221",
+   "id": "3a4338f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -99,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10abcfd8",
+   "id": "bdbce5f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -107,15 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a4d42f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acc38ca6",
+   "id": "5b042a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,10 +143,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8f47c8",
+   "id": "936cfac0",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb5b4bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Now we upload our dataframes to SQL\n",
+    "# Build the connection string\n",
+    "protocol = 'postgresql'\n",
+    "user = 'postgres'\n",
+    "location = 'localhost'\n",
+    "port = '5432'\n",
+    "db = 'crop_insurance'\n",
+    "password = getpass('Enter database password')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bdc15d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store \n",
+    "db_string = f'{protocol}://{user}:{password}@{location}:{port}/{db}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748e53ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create database engine\n",
+    "engine = create_engine(db_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e004f492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_sql(name='farmland_data', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59702901",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## See webscraping notes for MongoDB alternative"
+   ]
   }
  ],
  "metadata": {
