--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c037561a",
+   "id": "8ecd4740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d02ce85a",
+   "id": "1c00c40a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set columns and target variable(y)\n",
-    "columns = []\n",
-    "target = [\"\"]\n",
-    "\n",
     "# Load the data\n",
     "file_path = Path(\"\")\n",
     "df = pd.read_csv(file_path)"
@@ -46,11 +42,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c16ef4ff",
+   "id": "c62aaa11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our features\n",
+    "# Create our features, get_dummies for non-numerical columns\n",
     "df_encoded = pd.get_dummies(df.drop('target column', axis=1))\n",
     "X_cols = [i for i in df_encoded.columns if i not in ('target column')]\n",
     "X = df_encoded[X_cols]\n",
@@ -62,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65bc8c4b",
+   "id": "a65ecc40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57bf02b1",
+   "id": "c73ec060",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -81,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06d3b545",
+   "id": "8d3c895e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3969323",
+   "id": "34cb7b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e5f786e",
+   "id": "56d51a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb0e1d5f",
+   "id": "829736c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35922a22",
+   "id": "4ec44476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c542bf38",
+   "id": "29b85161",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "502a1657",
+   "id": "749de9ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -162,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54642921",
+   "id": "8afa6872",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -170,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95d8a3fd",
+   "id": "700a4482",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -178,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e08dfbd8",
+   "id": "a752fb33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f3e652",
+   "id": "e5761f91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e30161",
+   "id": "087abc6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45dbd7a2",
+   "id": "2a84bc8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e89dbaba",
+   "id": "c87ad8fb",
    "metadata": {},
    "outputs": [],
    "source": [
